# BangumiPipeline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  package-lock.json  package.json
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/cmd/sync-bangumi-comment-avatars/: main.go
backend/cmd/sync-bangumi-smiles/: main.go
backend/internal/applog/: handler.go  service.go  service_test.go
frontend/shared/: package.json
scripts/: build-android-apks.ps1  fix-mp4-remux.sh  prepare-mobile-android.mjs  sync-bangumi-comment-avatars.sh  sync-bangumi-smiles.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-res/drawable/: splash_background.xml
src-tauri/android-res/values/: colors.xml  dimens.xml  strings.xml
src-tauri/android-res/values-night/: themes.xml
src-tauri/android-res/values-v31/: themes.xml
src-tauri/android-src/main/java/vip/baka/bangumipipeline/mobile/: MainActivity.kt
src-tauri/capabilities/: default.json
src-tauri/plugins/image-saver/: Cargo.toml  build.rs
src-tauri/plugins/image-saver/android/: build.gradle.kts
src-tauri/plugins/image-saver/android/src/main/: AndroidManifest.xml
src-tauri/plugins/image-saver/android/src/main/java/vip/baka/bangumipipeline/imagesaver/: ImageSaverPlugin.kt
src-tauri/plugins/image-saver/permissions/: default.toml
src-tauri/plugins/image-saver/permissions/autogenerated/: reference.md
src-tauri/plugins/image-saver/permissions/autogenerated/commands/: discardImage.toml  discard_image.toml  prepareImage.toml  prepare_image.toml  saveImage.toml  save_image.toml
src-tauri/plugins/image-saver/permissions/schemas/: schema.json
src-tauri/plugins/image-saver/src/: lib.rs
src-tauri/plugins/player/: Cargo.toml  build.rs
src-tauri/plugins/player/android/: build.gradle.kts
src-tauri/plugins/player/android/src/main/java/vip/baka/bangumipipeline/player/: PlayerPlugin.kt
src-tauri/plugins/player/permissions/: default.toml
src-tauri/plugins/player/permissions/autogenerated/: reference.md
src-tauri/plugins/player/permissions/autogenerated/commands/: enterFullscreen.toml  enter_fullscreen.toml  exitFullscreen.toml  exit_fullscreen.toml  setKeepScreenOn.toml  set_keep_screen_on.toml
src-tauri/plugins/player/permissions/schemas/: schema.json
src-tauri/plugins/player/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
(+142 files in other folders)
