[package]
name = "bangumi-pipeline-mobile"
version = "0.1.0"
description = "BakaVip 2.0 mobile client"
authors = ["BangumiPipeline"]
edition = "2021"

[lib]
name = "bangumi_pipeline_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-player = { path = "plugins/player" }
