[package]
name = "bangumi-pipeline-mobile"
version = "1.2.2"
description = "BakaVip2 mobile client"
authors = ["BangumiPipeline"]
edition = "2021"

[lib]
name = "bangumi_pipeline_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-image-saver = { path = "plugins/image-saver" }
tauri-plugin-player = { path = "plugins/player" }
