[package]
name = "tauri-plugin-player"
version = "0.1.0"
description = "Native player controls for BakaVip2"
authors = ["BangumiPipeline"]
edition = "2021"
links = "tauri-plugin-player"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
